# EagleClassLists

./: .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  test_basic.py
.github/workflows/: publish-to-pypi-and-release.yml  run-ci-tests.yml
.opencode/plans/: exclusions-feature.md  students-widget.md
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/_templates/: module-template.rst
examples/: binary_cluster_demo.py  optimization_example.py
src/eagleclasslists/: __init__.py  _info.py  classlist.py  fitness.py  greedy_assignment.py  settings.py  simulated_annealing.py
src/eagleclasslists/app/: __init__.py  __main__.py  grade_list_model.py  main_window.py  settings_dialog.py
src/eagleclasslists/app/widgets/: __init__.py  classrooms_view.py  students_view.py  teachers_view.py
src/eagleclasslists/data/: __init__.py  classlist.py  errors.py  importer.py  settings.py  types.py
src/eagleclasslists/streamlit_app/: __init__.py  __main__.py  app.py
src/eagleclasslists/streamlit_app/pages/: __init__.py  assignments.py  classrooms.py  save_load.py  students.py  teachers.py
tests/: test_fitness.py  test_grades.py  test_greedy_assignment.py  test_import.py  test_settings.py  test_simulated_annealing.py
tests/classlist/: test_classroom.py  test_excel.py
