####################################################################################################
# EagleClassLists is a tool used to aid in the creation of class lists for schools.
# Copyright (C) 2026, Benjamin Davis
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
####################################################################################################

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"


[project]
name = "EagleClassLists"
version = "0.1.0"
description = "EagleClassLists is a tool used to aid in the creation of class lists for schools."
readme = "README.md"
authors = [
    { name = "Benjamin Davis", email = "allrisc.dev@gmail.com" }
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: Utilities",
]
keywords = ["rtl", "hdl", "packaging", "Verilog", "UVM", "SystemVerilog"]

requires-python = ">=3.12"

dependencies = [
    "openpyxl>=3.1.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "tox>=4.25.0",
    "tox-uv>=1.13.1",
]
docs=[
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-prompt>=1.10.0",
    "sphinxcontrib-autoprogram>=0.1.9",
    "sphinx-collapse>=0.1.3",
    "myst-parser>=4.0.1",
]
tests=[
    "pytest>=7.4.4",
    "pytest-mock>=3.15.1",
]
typing=[
    "mypy>=1.4.1",
    "types-openpyxl>=3.1.5.20260322",
]

[project.scripts]
ecl = "eagleclasslists.streamlit:app"

[project.urls]
Homepage = "https://github.com/allrisc/EagleClassLists"
# Documentation = "https://eagleclasslists.readthedocs.io/en/latest/index.html"

# Tool Configurations
####################################################################################################
[tool.autopep8]
max-line-length = 100

[tool.mypy]
warn_return_any = true
pretty = true

python_version = "3.12"

files = ["src"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100
indent-width = 4

target-version = "py312"
show-fixes = true

src = ["src"]
exclude = [".*", "tests/data/*"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "N",  # pep8-naming
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]
ignore = []

preview = true

[tool.tox]
env_list = [
    "py312", "py313", "py314",
    "style",
    "typing",
    "docs_dirhtml",
]

[tool.tox.env_run_base]
description = "pytest on latest dependency versions"
runner = "uv-venv-runner"
package = "wheel"
wheel_build_env = ".pkg"
constrain_package_deps = true
#use_frozen_constraints = true
dependency_groups = ["tests"]

commands = [[
    "pytest", "-v", "--tb=short", "--basetemp={env_tmp_dir}",
    {replace = "posargs", default = [], extend = true},
]]

[tool.tox.env.style]
description = "run linting and style checks on code"
dependency_groups = ["dev"]
skip_install = true
commands = [["ruff", "check"]]

[tool.tox.env.typing]
description = "run static type checkers"
dependency_groups = ["typing"]
commands = [
    ["mypy"],
]

[tool.tox.env.docs_dirhtml]
description = "build docs in dirhtml mode"
dependency_groups = ["docs"]
allowlist_externals = ["rm"]
commands_pre = [
    ["rm", "-rf", "docs/source/api", "docs/_build/dirhtml",],
]
commands = [
    ["sphinx-build", "-E", "-W", "-b", "dirhtml", "docs/source", "docs/_build/dirhtml"],
]

[tool.tox.env.docs_html]
description = "build docs in html mode"
dependency_groups = ["docs"]
allowlist_externals = ["rm"]
commands_pre = [
    ["rm", "-rf", "docs/source/api", "docs/_build/html",],
]
commands = [
    ["sphinx-build", "-E", "-W", "-b", "html", "docs/source", "docs/_build/html"],
]
